--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 python:
   - "3.6"
-  - "3.7"
+  #- "3.7" commented due to travis distrib install error / permission denied
 # command to install dependencies
 install:
   - pip install -r requirements.txt
