Improve tox to run pytest with coverage and type_checker

--- a/tox.ini
+++ b/tox.ini
@@ -2,5 +2,8 @@
 envlist = py36
 [testenv]
 deps = pytest
-command = pytest --cov=control_repository/
-          type_checker.sh
+       pytest-cov
+       -rrequirements.txt
+commands = pip install -e .
+           pytest --cov=control_repository
+           type_checker.sh
