Add mypy as deps for tox

--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ envlist = py36
 [testenv]
 deps = pytest
        pytest-cov
+       mypy
        -rrequirements.txt
 commands = pip install -e .
            pytest --cov=control_repository
