Add flake8 check in tox

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,9 @@ envlist = py36
 deps = pytest
        pytest-cov
        mypy
+       flake8
        -rrequirements.txt
 commands = pip install -e .
            pytest --cov=control_repository
+           flake8 --ignore=F401 control_repository
            type_checker.sh
