Run mypy directly from tox

--- a/tox.ini
+++ b/tox.ini
@@ -9,4 +9,4 @@ deps = pytest
 commands = pip install -e .
            pytest --cov=control_repository
            flake8 --ignore=F401 control_repository
-           type_checker.sh
+           mypy --strict --ignore-missing-imports control_repository/
