--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
+sudo: false
 language: python
+dist: "xenial"
 python:
-  - 3.6
-matrix:
-  include:
-    - python: 3.7
-      dist: xenial
-      sudo: true
+  - "3.6"
+  - "3.7"
 # command to install dependencies
 install:
   - pip install tox codecov
