--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
-sudo: false
 language: python
-dist: "xenial"
-python:
-  - "3.6"
-  - "3.7"
+
+matrix:
+  include:
+    - python: 3.6
+      dist: trusty
+      sudo: false
+    - python: 3.7
+      dist: xenial
+      sudo: true
 # command to install dependencies
 install:
   - pip install tox codecov
