--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,11 @@ matrix:
     - python: 3.6
       dist: trusty
       sudo: false
+      env: TOXENV=py36
     - python: 3.7
       dist: xenial
       sudo: true
+      env: TOXENV=py37
 # command to install dependencies
 install:
   - pip install tox codecov
