Add isort to linters

--- a/tox.ini
+++ b/tox.ini
@@ -4,10 +4,12 @@ envlist = py36,py37
 deps = pytest
        pytest-cov
        mypy
+       isort
        flake8
        flake8-quotes
        -rrequirements.txt
 commands = pip install -e .
            pytest --cov=control_repository
            flake8 --ignore=F401 control_repository
+           isort -rc --check-only control_repository/ --diff
            mypy --strict --ignore-missing-imports control_repository/
