--- a/tox.ini
+++ b/tox.ini
@@ -7,9 +7,11 @@ deps = pytest
        isort
        flake8
        flake8-quotes
+       pylint
        -rrequirements.txt
 commands = pip install -e .
            pytest --cov=control_repository
            flake8 --ignore=F401 control_repository
+           pylint control_repository/
            isort -rc --check-only control_repository/ --diff
            mypy --strict --ignore-missing-imports control_repository/
