--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,6 @@ deps = pytest
 commands = pip install -e .
            pytest --cov=control_repository
            flake8 --ignore=F401 control_repository
-           pylint --disable=too-many-arguments,unnecessary-pass control_repository/
+           pylint --disable=too-many-arguments,unnecessary-pass,missing-docstring control_repository/
            isort -rc --check-only --project control_repository/ --diff control_repository/
            mypy --strict --ignore-missing-imports control_repository/
